vitrail-pg-macros/tests/ui/fail/insert_result_relation_field.stderr
error: relation field `posts` cannot be returned from scalar insert for model `user`
  --> tests/ui/fail/insert_result_relation_field.rs:5:1
   |
 5 | / schema! {
 6 | |     name insert_schema
 7 | |
 8 | |     model user {
...  |
20 | | }
   | |_^
...
28 |   #[derive(InsertResult)]
   |            ------------ in this derive macro expansion
   |
   = note: this error originates in the macro `crate::insert_schema::__vitrail_assert_insert_result_type_insert_schema_user` which comes from the expansion of the derive macro `InsertResult` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<i64>: QueryResultValue` is not satisfied
  --> tests/ui/fail/insert_result_relation_field.rs:33:12
   |
33 |     posts: Vec<i64>,
   |            ^^^^^^^^ the trait `StringValueType` is not implemented for `Vec<i64>`
   |
help: the trait `StringValueType` is implemented for `std::string::String`
  --> $WORKSPACE/vitrail-pg-core/src/query.rs
   |
   | impl StringValueType for String {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `Vec<i64>` to implement `QueryResultValue`
note: required by a bound in `vitrail_pg_core::row_value`
  --> $WORKSPACE/vitrail-pg-core/src/query.rs
   |
   | pub fn row_value<T>(row: &PgRow, alias: &str) -> Result<T, sqlx::Error>
   |        --------- required by a bound in this function
   | where
   |     T: QueryResultValue,
   |        ^^^^^^^^^^^^^^^^ required by this bound in `row_value`
